chore: prepare for crates.io release
- Add MIT LICENSE file
- Update author to epistates, inc. <nick@epistates.com>
- Add Cargo.toml metadata: homepage, documentation, readme, rust-version
- Add badges to README (crates.io, docs.rs, license, CI)
- Restructure README with release focus:
  - Add Overview section
  - Simplify Features with emoji headers
  - Update Installation section for crates.io
  - Replace development roadmap with Contributing and Roadmap sections
- Add inline documentation for docs.rs:
  - Module-level docs for main.rs, parser/mod.rs, parser/document.rs
  - Function and struct documentation with examples
  - Proper rustdoc formatting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,16 @@
 name = "treemd"
 version = "0.4.0"
 edition = "2021"
-authors = ["Nick Paterno"]
+authors = ["epistates, inc. <nick@epistates.com>"]
 description = "A markdown navigator with tree-based structural navigation and syntax highlighting"
 license = "MIT"
 keywords = ["markdown", "tui", "viewer", "navigator", "pager"]
 categories = ["command-line-utilities", "text-processing"]
 repository = "https://github.com/epistates/treemd"
+homepage = "https://github.com/epistates/treemd"
+documentation = "https://docs.rs/treemd"
+readme = "README.md"
+rust-version = "1.81"
 
 [dependencies]
 # CLI framework
