--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -139,6 +139,9 @@ jobs:
       - name: Prepare artifacts (Windows)
         if: runner.os == 'Windows'
         run: |
+          # Create artifacts directory
+          New-Item -ItemType Directory -Force -Path artifacts | Out-Null
+
           $binary = "treemd-${{ matrix.target }}.exe"
           Copy-Item "target/${{ matrix.target }}/release/treemd.exe" $binary
 
