--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "treemd"
-version = "0.3.2"
+version = "0.4.0"
 edition = "2024"
 authors = ["epistates, inc. <nick@epistates.com>"]
 description = "A markdown navigator with tree-based structural navigation and syntax highlighting"
@@ -40,6 +40,10 @@ termimad = "0.34"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+# Query language support
+indexmap = { version = "2.7", features = ["serde"] }
+regex = "1.11"
+
 # TUI framework
 ratatui = "0.29"
 crossterm = "0.29"
@@ -60,12 +64,19 @@ open = "5.3"
 # Open files in default editor
 edit = "0.1"
 
+# Atomic file operations
+tempfile = "3.15"
+
 # Configuration persistence
 dirs = "6.0"
 toml = "0.9"
 
 # Terminal color capability detection
 supports-color = "3.0"
+
+# Unix system calls for TTY handling
+[target.'cfg(unix)'.dependencies]
+libc = "0.2"
 
 [features]
 default = ["unstable-dynamic"]
