--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,10 @@ dirs = "6.0"
 toml = "0.9"
 
 # Enum utilities for keybindings
-strum = { version = "0.26", features = ["derive"] }
+strum = { version = "0.27", features = ["derive"] }
+
+# Keybinding parsing and dispatch
+keybinds = { version = "0.2", features = ["crossterm", "serde"] }
 
 # Terminal color capability detection
 supports-color = "3.0"
