--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "treemd"
-version = "0.4.8"
+version = "0.5.0"
 edition = "2024"
 authors = ["epistates, inc. <nick@epistates.com>"]
 description = "A markdown navigator with tree-based structural navigation and syntax highlighting"
@@ -29,9 +29,8 @@ clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
 # Markdown parsing - fully delegated to turbovault-parser for OFM support
 unicode-width = "0.2"
 
-# Turbovault integration (local path for development, will be versioned for release)
-turbovault-parser = { path = "../turbovault/crates/turbovault-parser" }
-turbovault-core = { path = "../turbovault/crates/turbovault-core" }
+# Turbovault integration - OFM parsing with code-block awareness
+turbovault-parser = "1.2.1"
 
 # Tree data structure for heading hierarchy
 indextree = "4.7"
