feat: add image rendering dependencies
Add ratatui-image and image crates with crossterm support for terminal
graphics protocol detection and rendering (Sixel, Kitty, iTerm2).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,10 @@ ratatui = "0.29"
 crossterm = "0.29"
 color-eyre = "0.6"
 
+# Image rendering in TUI
+ratatui-image = { version = "1.0", features = ["crossterm"] }
+image = "0.25"
+
 # Syntax highlighting
 syntect = "5.2"
 
