--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ color-eyre = "0.6"
 # Image rendering in TUI
 ratatui-image = { version = "1.0", features = ["crossterm"] }
 image = "0.25"
+gif = "0.13"
 
 # Syntax highlighting
 syntect = "5.2"
